--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">AcuityTestApp</string>
+    <string name="app_name">Acuity Application</string>
+    <string name="wrong">Wrong</string>
+    <string name="right">Right</string>
+    <string name="literkowo">Literkowo</string>
 </resources>
