--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Acuity Application</string>
     <string name="wrong">Wrong</string>
     <string name="right">Right</string>
-    <string name="literkowo">Literkowo</string>
+    <string name="literkowo">Snellen Test</string>
+    <string name="standInformation">Please stand 3 m from the screen</string>
+    <string name="coverRightEyeInformation">"and cover your right eye."</string>
+    <string name="startTest">"Start Test"</string>
+    <string name="coverLeftEyeInformation">"Please cover your left eye</string>
 </resources>
