New images in layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
     <string name="wrong">Wrong</string>
     <string name="right">Right</string>
     <string name="literkowo">Snellen Test</string>
-    <string name="standInformation">Please stand 3 m from the screen</string>
-    <string name="coverRightEyeInformation">"and cover your right eye."</string>
+    <string name="coverRightEyeInformation">"Please stand 3 m from the screen and cover your right eye."</string>
     <string name="startTest">"Start Test"</string>
     <string name="coverLeftEyeInformation">"Please cover your left eye</string>
 </resources>
